# curated-store

./: README.md  gen-all-proto.sh  go.work  go.work.sum  set-secrets.sh  set-up-secrets.sh  skaffold.yaml  tidy-all-go-mod.sh
.github/workflows/: README.md  ci-main-build.yaml  ci-main-pr-test.yaml  ci-main-test.yaml  ci-main.yaml  ci-pr.yaml  go.yaml  kubevious-manifests-ci.yaml  kustomize-build-ci.yaml
docs/: login.md  middleware.md
infra/: go.mod  go.sum
infra/xgrpc/: bootstrap.go  go.mod  go.sum
kubernetes-manifests/: README.md  cartservice.yaml  components.yaml  emailservice.yaml  frontend.yaml  introduction.md  kustomization.yaml  loadgenerator.yaml  productcatalogservice.yaml
kubernetes-manifests/base/: frontend.yaml  loadgenerator.yaml  oauth2-proxy.yaml  productcatalogservice.yaml  shippingservice.yaml
protos/: demo.proto
src/adservice/: Dockerfile  ad.go  go.mod  go.sum  server.go
src/assistantservice/: README.md
src/cartservice/: Dockerfile  README_go.md  cart_service.go  go.mod  go.sum  health_service.go  main.go
src/checkoutservice/: Dockerfile  README.md  checkout.go  go.mod  go.sum  server.go
src/common/: bootstrap.go  go.mod  go.sum
src/currencyservice/: Dockerfile  currency_conversion.json  currency_loader.go  (+4 more)
src/emailservice/: Dockerfile  README.md  demo_pb2.py  demo_pb2_grpc.py  email_server.py  genproto.sh  pyproject.toml  requirements.in  requirements.txt
src/recommendationservice/: Dockerfile  README.md  demo_pb2.py  demo_pb2_grpc.py  logger.py  pyproject.toml  recommendation_server.py  requirements.in  requirements.txt
(+70 files in other folders)
