[project]
name = "recommendationservice"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "grpcio==1.78.0",
    "grpcio-health-checking==1.78.0",
    "grpcio-tools==1.78.0",
    "protobuf>=5.29.0,<7.0.0",
    "python-json-logger==3.3.0",
    "typing-extensions==4.15.0",
]
